--- a/templates/success.html
+++ b/templates/success.html
@@ -20,7 +20,7 @@
         <div class="container">
             <div class="jumbotron">
                 <h1 class="display-4">The Process was successfull</h1>
-                <p class="lead"> The rersult was: {{ prediction }} </p>
+                <p class="lead"> The result was: {{ prediction }} </p>
                 <hr class="my-4">
 
                     <p class="lead">
@@ -30,7 +30,7 @@
          </div>
 
          <footer>
-             <p class="text-center">CUT Projects 2018</p>
+             <p class="text-center">CHINHOYI UNIVERSITY OF TECHNOLOGY</p>
          </footer>
 
     </body>
